fix: buttons spacing

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <h1 class="my-4" >La Tecnología de Hoy, Diseñada para Mañana</h1>
                 <p class="mb-4">Eleva tu experiencia tecnológica con dispositivos que están a la altura de tus expectativas. </p>
                 <div class="d-flex justify-content-center">
-                <button type="button" class="btn py-2 mb-5 fs-5"><a href="#productos" class="text-dark">Ver Más</a></button>
+                <button type="button" class="btn px-3 py-2 mb-5 fs-5"><a href="#productos" class="text-dark">Ver Más</a></button>
             </div>
         </section>
         </div>
         <section id="productos">
             <div class="container pt-4">
-            <h2 class="mb-2">Productos Destacados</h2>
+            <h2 class="mb-3">Productos Destacados</h2>
             <p>Estos son los productos más solicitados en la tienda actualmente:</p>
             <div class="container d-flex justify-content-center align-items-center flex-wrap my-4">
             <div class="card text-white text-center mx-3 mt-2 mb-4">
@@ -61,7 +61,7 @@
                   <h4 class="card-title"> Laptop Gamer X-Plode Pro</h4>
                   <p class="card-text">Potencia máxima para gamers: Intel Core i7, 16GB de RAM, y RTX 4060. Pantalla FHD 144Hz y diseño optimizado para largas sesiones.</p>
                   <p class="fw-bold fs-5">$773.000</p>
-                  <button type="button" class="btn btn-success fs-5">Comprar</button>
+                  <button type="button" class="btn btn-success fs-5 px-3 ">Comprar</button>
                 </div>
               </div>
               <div class="card text-white text-center  mx-3 mb-4">
@@ -70,7 +70,7 @@
                   <h4 class="card-title">Monitor UltraWide ProVision 34"</h4>
                   <p class="card-text">Pantalla curva QHD+ con tecnología HDR10 y 120Hz. Perfecto para gaming, diseño y multitarea avanzada.</p>
                   <p class="fw-bold fs-5">$600.500</p>
-                  <button type="button" class="btn btn-success  fs-5">Comprar</button>
+                  <button type="button" class="btn btn-success  fs-5 px-3 ">Comprar</button>
                 </div>
               </div>
               <div class="card text-white text-center  mx-3 mb-4">
@@ -79,7 +79,7 @@
                   <h4 class="card-title">Teclado Mecánico Corsair K95 RGB Platinum</h4>
                   <p class="card-text">Velocidad y precisión con interruptores Cherry MX Speed, teclas RGB personalizables y diseño ergonómico.</p>
                   <p class="fw-bold fs-5">$75.900</p>
-                  <button type="button" class="btn btn-success fs-5">Comprar</button>
+                  <button type="button" class="btn btn-success fs-5 px-3 ">Comprar</button>
                 </div>
               </div>
             </div>
