fix: hero text size

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="container hero">
         <section class="my-5 mx-auto pt-1 hero">
           <h1 class="my-4">La Tecnología de Hoy, Diseñada para Mañana</h1>
-          <p class="mb-4 lead">Eleva tu experiencia tecnológica con dispositivos que están a la altura de tus
+          <p class="mb-4 hero-text">Eleva tu experiencia tecnológica con dispositivos que están a la altura de tus
             expectativas.
           </p>
           <div class="d-flex justify-content-center">
