--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             expectativas.
           </p>
           <div class="d-flex justify-content-center">
-            <button type="button" class="btn px-3 py-2 mb-5 fs-5"><a href="#productos">Ver
-                Más</a></button>
+            <button type="button" class="btn px-3 py-2 mb-5 fs-5"  onclick="location.href='#productos'">Ver
+                Más</button>
           </div>
         </section>
       </div>
@@ -116,7 +116,6 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </section>
